# MercuriusLib

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindMercuriusLib.cmake
include/Merc/: Export.h  IPAddress.h  Merc.h  NetworkAdapter.h  NetworkSystem.h  Service.h  SessionLogin.h  SessionReception.h  Socket.h  TCPSocket.h  UDPSocket.h
sources/: BerkeleySocket.cpp  BerkeleySocket.h  BerkeleyTCPSocket.cpp  BerkeleyTCPSocket.h  BerkeleyUDPSocket.cpp  BerkeleyUDPSocket.h  IPAddress.cpp  IPv4Address.cpp  IPv4Address.h  NetworkAdapter.cpp  NetworkSystem.cpp  Service.cpp  SessionLogin.cpp  SessionReception.cpp  Socket.cpp  SocketUtil.cpp  SocketUtil.h  TCPSocket.cpp  UDPSocket.cpp
sources/Platform/: Platform.h  SocketSystem.h
sources/Platform/Linux/: SocketSystem.cpp
sources/Platform/Unix/: SocketAPI.h  SocketSystem.cpp
sources/Platform/Win32/: SocketAPI.h  SocketSystem.cpp
test/: Test1.cpp  Test2_SessionReception.cpp  Test3_SessionLogin.cpp
